[project]
name = "sorusora"
version = "0.0.0"
description = "AI-Powered Versatile Discord Bot"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "aiofiles>=24.1.0",
    "deep-translator>=1.11.4",
    "discord.py>=2.3.2",
    "langid>=1.1.6",
    "numpy>=1.25.2",
    "python-dotenv>=1.0.0",
    "opencv-python>=4.10.0.82",
    "tqdm>=4.66.1",
    "motor>=3.6.0",
    "fluent.runtime>=0.4.0",
    "argostranslate>=1.9.1",
    "cryptography>=42.0.8",
    "google-genai[aiohttp]>=1.31.0",
    "sentry-sdk>=2.37.0",
]

[tool.uv]
# optional: tell uv to generate/maintain a lock file
package = true

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.12.10",
    "ty>=0.0.1a20",
]
